src/test/ui/traits/copy-impl-cannot-normalize.stderr
error[E0277]: the trait bound `T: TraitFoo` is not satisfied
  --> $DIR/copy-impl-cannot-normalize.rs:22:18
   |
LL | impl<T> Copy for Foo<T> {}
   |                  ^^^^^^ the trait `TraitFoo` is not implemented for `T`
   |
help: consider restricting type parameter `T`
   |
LL | impl<T: TraitFoo> Copy for Foo<T> {}
   |       ++++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
